--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <img src="logoweb-dammekynang.png" alt="Logo Damme Kỹ Năng">
     </div>
     <div class="social-links">
-      <a href="#"><img src="fb-icon.png" alt="Facebook"></a>
-      <a href="#"><img src="zalo-icon.png" alt="Zalo"></a>
-      <a href="#"><img src="ig-icon.png" alt="Instagram"></a>
+      <a href="https://www.facebook.com/cuongcowk/"><img src="fb-icon.png" alt="Facebook"></a>
+      <a href="http://zalo.me/84799444052"><img src="zalo-icon.png" alt="Zalo"></a>
+      <a href="https://www.instagram.com/cuong_cow/"><img src="ig-icon.png" alt="Instagram"></a>
     </div>
   </header>
   <main>
