--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Đam Mê Kỹ Năng - Đang xây dựng</title>
+  <link rel="icon" href="logoweb-dammekynang.png" type="image/png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
