--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <img src="logoweb-dammekynang.png" alt="Logo Damme Kỹ Năng">
     </div>
     <div class="social-links">
-      <a href="#"><img src="fb-icon.png" alt="Facebook"></a>
-      <a href="#"><img src="zalo-icon.png" alt="Zalo"></a>
-      <a href="#"><img src="ig-icon.png" alt="Instagram"></a>
+      <a href="fb-icon.png"><img src="fb-icon.png" alt="Facebook"></a>
+      <a href="zalo-icon.png"><img src="zalo-icon.png" alt="Zalo"></a>
+      <a href="ig-icon.png"><img src="ig-icon.png" alt="Instagram"></a>
     </div>
   </header>
   <main>
